--- a/index.html
+++ b/index.html
@@ -22,11 +22,123 @@
     </section>
 
     <section class="section-carousel">
-        
+
     </section>
 
     <section class="section-main">
+        <div class="info">
+            <h1 class="h1 info__heading">
+                Entertainment guide at Australian Casinos
+            </h1>
+            <p class="p info__paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod at neque sed feugiat. Vivamus
+                eu congue felis. Sed aliquam lobortis ante, venenatis euismod lorem.
+            </p>
+        </div>
 
+        <div class="gridbox">
+            <div class="gridbox__card">
+                <img src="./assets/img/crowncasinomelbourne@2x.png" alt="gridbox-img" class="gridbox__img">
+                <div class="gridbox__card__details">
+                    <div class="gridbox__card__details__headings">
+                        <p class="gridbox__card__details__headings__paragraph">
+                            Melbourne
+                        </p>
+                        <h5 class="h5 gridbox__card__details__headings__heading">
+                            Crown Casino
+                        </h5>
+                    </div>
+                    <p class="gridbox__card__details__stories m-b-1">
+                        Australia’s largest casino and entertainment complex offers a fantastic array of amenities
+                        including
+                        luxury accommodation, cinema, and theatre that seats over 5000! Look out for great upcoming acts
+                        including ‘Burn The Floor’ ballet and magician Louis Yan, known as the ‘David Copperfield of
+                        Hong
+                        Kong!’
+                    </p>
+                    <button class="gridbox__card__details__btn">
+                        Read more
+                    </button>
+                </div>
+            </div>
+            <div class="gridbox__card">
+                <img src="./assets/img/JupitersCasinoGoldCoast@2x.png" alt="gridbox-img" class="gridbox__img">
+                <div class="gridbox__card__details">
+                    <div class="gridbox__card__details__headings">
+                        <p class="gridbox__card__details__headings__paragraph">
+                            Gold Coast
+                        </p>
+                        <h5 class="h5 gridbox__card__details__headings__heading">
+                            Jupiters Casino
+                        </h5>
+                    </div>
+                    <p class="gridbox__card__details__stories m-b-2">
+                        The Gold Coast is widely regarded as a playboy’s paradise, and Jupiters casino doesn’t
+                        disappoint! Boasting over 1000 luxurious rooms and the latest casino games, this Australian
+                        Casino also offers a vast array of entertainment including upcoming performances from Gold: The
+                        Abba Tribute, Roy Orbison & The Everley Brothers, as well as a Gala Night for Chinese New Year.
+                    </p>
+                    <button class="gridbox__card__details__btn">
+                        Read more
+                    </button>
+                </div>
+            </div>
+            <div class="gridbox__card">
+                <img src="./assets/img/StarCityCasinoSydney@2x.png" alt="gridbox-img" class="gridbox__img">
+                <div class="gridbox__card__details">
+                    <div class="gridbox__card__details__headings">
+                        <p class="gridbox__card__details__headings__paragraph">
+                            Sydney
+                        </p>
+                        <h5 class="h5 gridbox__card__details__headings__heading">
+                            The Star Casino
+                        </h5>
+                    </div>
+                    <p class="gridbox__card__details__stories m-b-3">
+                        The Star Casino is one of the newest casinos in Australia, and has been built to an amazing spec
+                        to offer guests an unrivalled experience in gaming, dining, entertainment and luxurious rooms.
+                        A-list entertainment this spring includes Tom Jones, Berlinda Carlisle, and John Cleese of Monty
+                        Python. Find out why so many people choose The Star in Australia’s most visited city.
+                    </p>
+                    <button class="gridbox__card__details__btn">
+                        Read more
+                    </button>
+                </div>
+            </div>
+            <div class="gridbox__card">
+                <img src="./assets/img/crowncasinomelbourne@2x.png" alt="gridbox-img" class="gridbox__img">
+                <div class="gridbox__card__details">
+                    <div class="gridbox__card__details__headings">
+                        <p class="gridbox__card__details__headings__paragraph">
+                            Sydney
+                        </p>
+                        <h5 class="h5 gridbox__card__details__headings__heading">
+                            Crown Casino
+                        </h5>
+                    </div>
+                    <p class="gridbox__card__details__stories m-b-4">
+                        Celebrating it’s 30 th Birthday this year, there has never been a better time to visit this
+                        luxurious casino. Many rooms offer excellent views of the city and the hotel offers various
+                        dining choices, a large gaming floor and numerous entertainment acts including Broadway shows
+                        such as Cats, Ghost, The Lion King to name but a few.
+                    </p>
+                    <button class="gridbox__card__details__btn">
+                        Read more
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div class="info">
+            <h1 class="h1 info__heading">
+                Independent guide to the best Australian Casinos entertainment </h1>
+            <p class="p info__paragraph">
+                Our guide to Australian casinos provides details on all licensed entertainment centres in major
+                Australian Cities. We have visited each of these premises on numerous occasions to provide up to date,
+                impartial information on the various casinos, including their accommodation, entertainment and other
+                facilities.
+            </p>
+        </div>
     </section>
 
     <section class="section-footer">
