--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel Australia</title>
+    <title>Hotel Australia - Home</title>
     <link rel="stylesheet" href="./styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700&display=swap" rel="stylesheet">
 </head>
@@ -14,9 +14,9 @@
         <header class="header">
             <h1 class="h1">Hot Australia</h1>
             <nav class="header__nav">
-                <a class="header__nav__link" href="#">Home</a>
-                <a class="header__nav__link" href="#">About Us</a>
-                <a class="header__nav__link" href="#">Privacy Policy</a>
+                <a class="header__nav__link" href="./index.html">Home</a>
+                <a class="header__nav__link" href="./pages/about-us.html">About Us</a>
+                <a class="header__nav__link" href="./pages/privacy.html">Privacy Policy</a>
             </nav>
         </header>
     </section>
