first RWD rules applied

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </button>
                 </div>
             </div>
-            <div class="gridbox__card">
+            <div class="gridbox__card p-m-2">
                 <img src="./assets/img/JupitersCasinoGoldCoast@2x.png" alt="gridbox-img" class="gridbox__img">
                 <div class="gridbox__card__details">
                     <div class="gridbox__card__details__headings">
