--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Hotel Australia - Home</title>
     <link rel="stylesheet" href="./styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -22,7 +25,7 @@
     </section>
 
 
-    <section class="carousel" aria-label="Gallery"> 
+    <section class="carousel" aria-label="Gallery">
     </section>
 
     <section class="section-main">
@@ -31,7 +34,7 @@
                 Entertainment guide at Australian Casinos
             </h1>
             <p class="p info__paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod at neque sed feugiat.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam euismod at neque sed feugiat. <br>
                 Vivamus
                 eu congue felis. Sed aliquam lobortis ante, venenatis euismod lorem.
             </p>
@@ -138,7 +141,7 @@
         </div>
 
         <div class="info">
-            <h1 class="h1 info__heading">
+            <h1 class="h1 info__heading info__heading--w436">
                 Independent guide to the best Australian Casinos entertainment </h1>
             <p class="p info__paragraph">
                 Our guide to Australian casinos provides details on all licensed entertainment centres in major
