1024px and 768 px rwd done

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="gridbox__card p-m-2">
                 <img src="./assets/img/JupitersCasinoGoldCoast@2x.png" alt="gridbox-img" class="gridbox__img">
-                <div class="gridbox__card__details">
+                <div class="gridbox__card__details g-c-d">
                     <div class="gridbox__card__details__headings">
                         <p class="gridbox__card__details__headings__paragraph">
                             Gold Coast
@@ -92,7 +92,7 @@
             </div>
             <div class="gridbox__card">
                 <img src="./assets/img/StarCityCasinoSydney@2x.png" alt="gridbox-img" class="gridbox__img">
-                <div class="gridbox__card__details">
+                <div class="gridbox__card__details card-padding-custom">
                     <div class="gridbox__card__details__headings">
                         <p class="gridbox__card__details__headings__paragraph">
                             Sydney
@@ -110,14 +110,14 @@
                         Monty
                         Python. Find out why so many people choose The Star in Australia’s most visited city.
                     </p>
-                    <button class="gridbox__card__details__btn">
+                    <button class="gridbox__card__details__btn m-button-b">
                         Read more
                     </button>
                 </div>
             </div>
             <div class="gridbox__card">
                 <img src="./assets/img/crowncasinomelbourne@2x.png" alt="gridbox-img" class="gridbox__img">
-                <div class="gridbox__card__details">
+                <div class="gridbox__card__details card-padding-custom">
                     <div class="gridbox__card__details__headings">
                         <p class="gridbox__card__details__headings__paragraph">
                             Sydney
@@ -133,7 +133,7 @@
                         shows
                         such as Cats, Ghost, The Lion King to name but a few.
                     </p>
-                    <button class="gridbox__card__details__btn">
+                    <button class="gridbox__card__details__btn m-button-b">
                         Read more
                     </button>
                 </div>
