full RWD home page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         Hong
                         Kong!’
                     </p>
-                    <button class="gridbox__card__details__btn">
+                    <button class="gridbox__card__details__btn m-button-all">
                         Read more
                     </button>
                 </div>
@@ -85,7 +85,7 @@
                         Abba Tribute, Roy Orbison & The Everley Brothers, as well as a Gala Night for Chinese New
                         Year.
                     </p>
-                    <button class="gridbox__card__details__btn">
+                    <button class="gridbox__card__details__btn m-button-all">
                         Read more
                     </button>
                 </div>
@@ -110,7 +110,7 @@
                         Monty
                         Python. Find out why so many people choose The Star in Australia’s most visited city.
                     </p>
-                    <button class="gridbox__card__details__btn m-button-b">
+                    <button class="gridbox__card__details__btn m-button-b m-button-all">
                         Read more
                     </button>
                 </div>
@@ -133,7 +133,7 @@
                         shows
                         such as Cats, Ghost, The Lion King to name but a few.
                     </p>
-                    <button class="gridbox__card__details__btn m-button-b">
+                    <button class="gridbox__card__details__btn m-button-b m-button-all">
                         Read more
                     </button>
                 </div>
