--- a/index.html
+++ b/index.html
@@ -14,16 +14,25 @@
 
 <body>
     <section class="section-header">
-        <header class="header">
+        <!-- <header class="header">
             <h1 class="h1">Hot Australia</h1>
             <nav class="header__nav">
                 <a class="header__nav__link" href="./index.html">Home</a>
                 <a class="header__nav__link" href="./pages/about-us.html">About Us</a>
                 <a class="header__nav__link" href="./pages/privacy.html">Privacy Policy</a>
             </nav>
+        </header> -->
+        <header class="header">
+            <a href="" class="logo h1">Hot Australia</a>
+            <input class="menu-btn" type="checkbox" id="menu-btn" />
+            <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+            <ul class="menu">
+                <li><a href="#work">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#careers">Privacy Policy</a></li>
+            </ul>
         </header>
     </section>
-
 
     <section class="carousel" aria-label="Gallery">
     </section>
