added rwd navbar

--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
             <ul class="menu">
-                <li><a href="#work">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#careers">Privacy Policy</a></li>
+                <li><a href="/index.html">
+                        <p>Home</p>
+                    </a></li>
+                <li><a href="./pages/about-us.html">
+                        <p>About Us</p>
+                    </a></li>
+                <li><a href="./pages/privacy.html">
+                        <p>Privacy Policy</p>
+                    </a></li>
             </ul>
         </header>
     </section>
