--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -11,13 +11,29 @@
 
 <body>
     <section class="section-header">
-        <header class="header">
+        <!-- <header class="header">
             <h1 class="h1">Hot Australia</h1>
             <nav class="header__nav">
-                <a class="header__nav__link" href="../index.html">Home</a>
-                <a class="header__nav__link" href="./about-us.html">About Us</a>
-                <a class="header__nav__link" href="./privacy.html">Privacy Policy</a>
+                <a class="header__nav__link" href="./index.html">Home</a>
+                <a class="header__nav__link" href="./pages/about-us.html">About Us</a>
+                <a class="header__nav__link" href="./pages/privacy.html">Privacy Policy</a>
             </nav>
+        </header> -->
+        <header class="header">
+            <a href="" class="logo h1">Hot Australia</a>
+            <input class="menu-btn" type="checkbox" id="menu-btn" />
+            <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+            <ul class="menu">
+                <li><a href="../index.html">
+                        <p>Home</p>
+                    </a></li>
+                <li><a href="./about-us.html">
+                        <p>About Us</p>
+                    </a></li>
+                <li><a href="./privacy.html">
+                        <p>Privacy Policy</p>
+                    </a></li>
+            </ul>
         </header>
     </section>
 
