added propper heights for subpages

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -41,7 +41,7 @@
 
     </section>
 
-    <section class="section-main">
+    <section class="section-main padding-zero h-15">
         <div class="info">
             <h1 class="h1 info__heading">
                 About Us
