--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -41,7 +41,7 @@
 
     </section>
 
-    <section class="section-main">
+    <section class="section-main padding-zero h-109">
         <div class="info">
             <h1 class="h1 info__heading">
                 Privacy Policy
