full rwd navbar repaired

--- a/index.html
+++ b/index.html
@@ -33,14 +33,54 @@
                 <li><a href="./pages/about-us.html">
                         <p>About Us</p>
                     </a></li>
-                <li><a href="./pages/privacy.html">
+                <li><a href="./pages/privacy.html" class="m-r-0">
                         <p>Privacy Policy</p>
                     </a></li>
             </ul>
         </header>
     </section>
 
-    <section class="carousel" aria-label="Gallery">
+    <section class="section-carousel" aria-label="Gallery">
+        <div class="carousel">
+            <div class="carousel__item" id="slide-1">
+                <p class="carousel__item__caption">Comedy</p>
+                <h1 class="carousel__item__h1">John Clese and Eric Idle</h1>
+                <h2 class="carousel__item__h2">Crown Melbourne</h2>
+                <p class="carousel__item__data">16th March</p>
+                <button class="carousel__item__btn">
+                    Book Now
+                </button>
+
+                <a href="#slide-5" class="carousel__item__prev"></a>
+                <a href="#slide-2" class="carousel__item__next"></a>
+            </div>
+            <div class="carousel__item" id="slide-2">
+                <p class="carousel__item__caption">Comedy</p>
+                <h1 class="carousel__item__h1">John Clese and Eric Idle</h1>
+                <h2 class="carousel__item__h2">Crown Melbourne</h2>
+                <p class="carousel__item__data">16th March</p>
+
+                <button class="carousel__item__btn">
+                    Book Now
+                </button>
+            </div>
+            <div class="carousel__item" id="slide-3">
+                <p class="carousel__item__caption">Comedy</p>
+                <h1 class="carousel__item__h1">John Clese and Eric Idle</h1>
+                <h2 class="carousel__item__h2">Crown Melbourne</h2>
+                <p class="carousel__item__data">16th March</p>
+
+                <button class="carousel__item__btn">
+                    Book Now
+                </button>
+            </div>
+        </div>
+
+        <div class="carousel__dots">
+            <a href="#slide-1" class="carousel__dots__dot"></a>
+            <a href="#slide-2" class="carousel__dots__dot"></a>
+            <a href="#slide-3" class="carousel__dots__dot"></a>
+        </div>
     </section>
 
     <section class="section-main">
