--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -38,7 +38,18 @@
     </section>
 
     <section class="section-carousel">
-
+        <div class="carousel">
+            <div class="carousel__item">
+                <p class="carosel__item__caption">Comedy</p>
+                <h1 class="carousel__item__h1">John Clese and Eric Idle</h1>
+                <h2 class="carousel__item__h2">Crown Melbourne</h2>
+                <p class="carousel__item__data">16th March</p>
+            </div>
+            <div class="carousel__item"></div>
+            <div class="carousel__item"></div>
+            <div class="carousel__item"></div>
+            <div class="carousel__item"></div>
+        </div>
     </section>
 
     <section class="section-main padding-zero h-109">
