--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -30,7 +30,7 @@
                 <li><a href="./about-us.html">
                         <p>About Us</p>
                     </a></li>
-                <li><a href="./privacy.html">
+                <li><a href="./privacy.html" class="m-r-0">
                         <p>Privacy Policy</p>
                     </a></li>
             </ul>
