test for carousel

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -38,7 +38,61 @@
     </section>
 
     <section class="section-carousel">
-
+        <div class="container">
+            <div class="carousel">
+                <input type="radio" id="carousel-1" name="carousel[]" checked>
+                <input type="radio" id="carousel-2" name="carousel[]">
+                <input type="radio" id="carousel-3" name="carousel[]">
+                <input type="radio" id="carousel-4" name="carousel[]">
+                <input type="radio" id="carousel-5" name="carousel[]">
+                <ul class="carousel__items">
+                    <li class="carousel__items__item">
+                        <div class="carousel__items__item" id="slide-1">
+                            <p class="carousel__items__item__caption">Comedy</p>
+                            <h1 class="carousel__items__item__h1">John Clese and Eric Idle</h1>
+                            <h2 class="carousel__items__item__h2">Crown Melbourne</h2>
+                            <p class="carousel__items__item__data">16th March</p>
+                            <button class="carousel__items__item__btn">
+                                Book Now
+                            </button>
+                        </div>
+                    </li>
+                    <li class="carousel__item"><img
+                            src="//lh4.googleusercontent.com/-ntVHbbWX5eo/U8-EmV8P4cI/AAAAAAAABc4/ICYBGkcztTc/w1358-h905-no/carousel-2.jpg"
+                            alt=""></li>
+                    <li class="carousel__item"><img
+                            src="//lh5.googleusercontent.com/-batEXUZE_e4/U8-EmLF9-hI/AAAAAAAABc0/J3tJVUa6Buk/w1358-h905-no/carousel-3.jpg"
+                            alt=""></li>
+                    <li class="carousel__item"><img
+                            src="//lh5.googleusercontent.com/-gywqIeMvel0/U8-EolKdtkI/AAAAAAAABdM/G0-NHuvvJUU/w1358-h905-no/carousel-4.jpg"
+                            alt=""></li>
+                    <li class="carousel__item"><img
+                            src="//lh5.googleusercontent.com/--2iANjL3ikc/U8-EoGJ18mI/AAAAAAAABdI/fBe-q3Gos6Y/w1358-h905-no/carousel-5.jpg"
+                            alt=""></li>
+                </ul>
+                <div class="carousel__prev">
+                    <label for="carousel-1"></label>
+                    <label for="carousel-2"></label>
+                    <label for="carousel-3"></label>
+                    <label for="carousel-4"></label>
+                    <label for="carousel-5"></label>
+                </div>
+                <div class="carousel__next">
+                    <label for="carousel-1"></label>
+                    <label for="carousel-2"></label>
+                    <label for="carousel-3"></label>
+                    <label for="carousel-4"></label>
+                    <label for="carousel-5"></label>
+                </div>
+                <div class="carousel__nav">
+                    <label for="carousel-1"></label>
+                    <label for="carousel-2"></label>
+                    <label for="carousel-3"></label>
+                    <label for="carousel-4"></label>
+                    <label for="carousel-5"></label>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="section-main padding-zero h-15">
@@ -50,7 +104,7 @@
                 We are the leading entertainment comparison service in Australia. We source the best deals from a
                 variety of providers to ensure the lowest prices for our visitors. We provide independent information
                 about the best entertainment venues including music, comedy, dance and stage productions to offer a
-                comprehensive guide for a wide range of tastes. 
+                comprehensive guide for a wide range of tastes.
                 <br><br>
                 We also offer a price match guarantee on all bookings
                 made through this site and our partners. Should you find the same deal cheaper within 7 days, we will
