--- a/index.html
+++ b/index.html
@@ -4,26 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel Australia - Home</title>
     <link rel="stylesheet" href="./styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
-
+    <title>Home</title>
 </head>
 
 <body>
     <section class="section-header">
-        <!-- <header class="header">
-            <h1 class="h1">Hot Australia</h1>
-            <nav class="header__nav">
-                <a class="header__nav__link" href="./index.html">Home</a>
-                <a class="header__nav__link" href="./pages/about-us.html">About Us</a>
-                <a class="header__nav__link" href="./pages/privacy.html">Privacy Policy</a>
-            </nav>
-        </header> -->
         <header class="header">
-            <a href="" class="logo h1">Hot Australia</a>
+            <a href="" class="logo h1">Aussie Luxe</a>
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
             <ul class="menu">
@@ -213,8 +204,10 @@
             <div class="footer__details">
                 <h4 class="h4"> 2020 © Hot Australia</h4>
                 <p class="p p--grey">
-                    Independent Entertainment Guide 4 Lawrence St, Freshwater NSW 2096 Phone: (02) 9939
-                    5560
+                    Independent Entertainment Guide <br>
+                    4 Lawrence St, Freshwater NSW 2096
+                    <br>
+                    Phone: (02) 9939 5560
                 </p>
             </div>
         </footer>
