--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
-    <title>Home</title>
+    <title>Aussie Luxe - Home</title>
 </head>
 
 <body>
@@ -188,7 +188,7 @@
 
         <div class="info">
             <h1 class="h1 info__heading info__heading--w436">
-                Independent guide to the best Australian Casinos entertainment </h1>
+                Independent guide to the best <br> Australian Casinos entertainment </h1>
             <p class="p info__paragraph">
                 Our guide to Australian casinos provides details on all licensed entertainment centres in major
                 Australian Cities. We have visited each of these premises on numerous occasions to provide up to
@@ -202,7 +202,7 @@
     <section class="section-footer">
         <footer class="footer">
             <div class="footer__details">
-                <h4 class="h4"> 2020 © Hot Australia</h4>
+                <h4 class="h4"> 2020 © Aussie Luxe</h4>
                 <p class="p p--grey">
                     Independent Entertainment Guide <br>
                     4 Lawrence St, Freshwater NSW 2096
