--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
             <ul class="menu">
-                <li><a href="/index.html">
+                <li class="first-child-mt"><a href="/index.html">
                         <p>Home</p>
                     </a></li>
                 <li><a href="./pages/about-us.html">
                         <p>About Us</p>
                     </a></li>
-                <li><a href="./pages/privacy.html" class="m-r-0">
+                <li class="last-child-mb"><a href="./pages/privacy.html" class="m-r-0">
                         <p>Privacy Policy</p>
                     </a></li>
             </ul>
