--- a/index.html
+++ b/index.html
@@ -32,46 +32,60 @@
     </section>
 
     <section class="section-carousel" aria-label="Gallery">
-        <div class="carousel">
-            <div class="carousel__item" id="slide-1">
-                <p class="carousel__item__caption">Comedy</p>
-                <h1 class="carousel__item__h1">John Clese and Eric Idle</h1>
-                <h2 class="carousel__item__h2">Crown Melbourne</h2>
-                <p class="carousel__item__data">16th March</p>
-                <button class="carousel__item__btn">
+        <div class="slider">
+            <div id="slide-1" class="slide" id="slide-1">
+                <a href="#slide-5" class="slide__prev"><</a>
+                <p class="slide__paragraph">Comedy</p>
+                <h1 class="slide__h1">John Cleese and Eric Idle</h1>
+                <h4 class="slide__h4">Crown Melbourne</h4>
+                <h5 class="slide__h5">16th March</h5>
+                <button class="slide__btn">
                     Book Now
                 </button>
-
-                <a href="#slide-5" class="carousel__item__prev"></a>
-                <a href="#slide-2" class="carousel__item__next"></a>
+                <a href="#slide-2" class="slide__next">></a>
             </div>
-            <div class="carousel__item" id="slide-2">
-                <p class="carousel__item__caption">Comedy</p>
-                <h1 class="carousel__item__h1">John Clese and Eric Idle</h1>
-                <h2 class="carousel__item__h2">Crown Melbourne</h2>
-                <p class="carousel__item__data">16th March</p>
-
-                <button class="carousel__item__btn">
+            <div id="slide-2" class="slide" id="slide-2">
+                <a href="#slide-1" class="slide__prev"><</a>
+                <p class="slide__paragraph">Music</p>
+                <h1 class="slide__h1">Berlind Carlisle and Jupiters</h1>
+                <h4 class="slide__h4">Gold Coast</h4>
+                <h5 class="slide__h5">4 th March</h5>
+                <button class="slide__btn">
                     Book Now
                 </button>
+                <a href="#slide-3" class="slide__next">></a>
             </div>
-            <div class="carousel__item" id="slide-3">
-                <p class="carousel__item__caption">Comedy</p>
-                <h1 class="carousel__item__h1">John Clese and Eric Idle</h1>
-                <h2 class="carousel__item__h2">Crown Melbourne</h2>
-                <p class="carousel__item__data">16th March</p>
-
-                <button class="carousel__item__btn">
+            <div id="slide-3" class="slide" id="slide-3">
+                <a href="#slide-2" class="slide__prev"><</a>
+                <p class="slide__paragraph">Show</p>
+                <h1 class="slide__h1">Cabaret De Paris and Jupiters</h1>
+                <h4 class="slide__h4">Gold Coast</h4>
+                <h5 class="slide__h5">27 th February</h5>
+                <button class="slide__btn">
                     Book Now
                 </button>
+                <a href="#slide-4" class="slide__next">></a>
+            </div>
+            <div id="slide-4" class="slide" id="slide-4">
+                <a href="#slide-3" class="slide__prev"><</a>
+                <p class="slide__paragraph">Music</p>
+                <h1 class="slide__h1">Tom Jones and Sydney Casino</h1>
+                <h4 class="slide__h4">21 st &amp;</h4>
+                <h5 class="slide__h5">22 nd March</h5>
+                <button class="slide__btn">
+                    Book Now
+                </button>
+                <a href="#slide-1" class="slide__next">></a>
             </div>
         </div>
-
-        <div class="carousel__dots">
-            <a href="#slide-1" class="carousel__dots__dot"></a>
-            <a href="#slide-2" class="carousel__dots__dot"></a>
-            <a href="#slide-3" class="carousel__dots__dot"></a>
+        <div class="dots">
+            <a href="#slide-1" class="dot"></a>
+            <a href="#slide-2" class="dot"></a>
+            <a href="#slide-3" class="dot"></a>
+            <a href="#slide-4" class="dot"></a>
+            <a href="#slide-5" class="dot"></a>
         </div>
+        <span class="hide"></span>
     </section>
 
     <section class="section-main">
