--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -4,23 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel Australia - About Us</title>
+    <title>Aussie Luxe - About Us</title>
     <link rel="stylesheet" href="../styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <section class="section-header">
-        <!-- <header class="header">
-            <h1 class="h1">Hot Australia</h1>
-            <nav class="header__nav">
-                <a class="header__nav__link" href="./index.html">Home</a>
-                <a class="header__nav__link" href="./pages/about-us.html">About Us</a>
-                <a class="header__nav__link" href="./pages/privacy.html">Privacy Policy</a>
-            </nav>
-        </header> -->
         <header class="header">
-            <a href="" class="logo h1">Hot Australia</a>
+            <a href="../index.html" class="logo h1">Hot Australia</a>
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
             <ul class="menu">
@@ -38,61 +30,7 @@
     </section>
 
     <section class="section-carousel">
-        <div class="container">
-            <div class="carousel">
-                <input type="radio" id="carousel-1" name="carousel[]" checked>
-                <input type="radio" id="carousel-2" name="carousel[]">
-                <input type="radio" id="carousel-3" name="carousel[]">
-                <input type="radio" id="carousel-4" name="carousel[]">
-                <input type="radio" id="carousel-5" name="carousel[]">
-                <ul class="carousel__items">
-                    <li class="carousel__items__item">
-                        <div class="carousel__items__item" id="slide-1">
-                            <p class="carousel__items__item__caption">Comedy</p>
-                            <h1 class="carousel__items__item__h1">John Clese and Eric Idle</h1>
-                            <h2 class="carousel__items__item__h2">Crown Melbourne</h2>
-                            <p class="carousel__items__item__data">16th March</p>
-                            <button class="carousel__items__item__btn">
-                                Book Now
-                            </button>
-                        </div>
-                    </li>
-                    <li class="carousel__item"><img
-                            src="//lh4.googleusercontent.com/-ntVHbbWX5eo/U8-EmV8P4cI/AAAAAAAABc4/ICYBGkcztTc/w1358-h905-no/carousel-2.jpg"
-                            alt=""></li>
-                    <li class="carousel__item"><img
-                            src="//lh5.googleusercontent.com/-batEXUZE_e4/U8-EmLF9-hI/AAAAAAAABc0/J3tJVUa6Buk/w1358-h905-no/carousel-3.jpg"
-                            alt=""></li>
-                    <li class="carousel__item"><img
-                            src="//lh5.googleusercontent.com/-gywqIeMvel0/U8-EolKdtkI/AAAAAAAABdM/G0-NHuvvJUU/w1358-h905-no/carousel-4.jpg"
-                            alt=""></li>
-                    <li class="carousel__item"><img
-                            src="//lh5.googleusercontent.com/--2iANjL3ikc/U8-EoGJ18mI/AAAAAAAABdI/fBe-q3Gos6Y/w1358-h905-no/carousel-5.jpg"
-                            alt=""></li>
-                </ul>
-                <div class="carousel__prev">
-                    <label for="carousel-1"></label>
-                    <label for="carousel-2"></label>
-                    <label for="carousel-3"></label>
-                    <label for="carousel-4"></label>
-                    <label for="carousel-5"></label>
-                </div>
-                <div class="carousel__next">
-                    <label for="carousel-1"></label>
-                    <label for="carousel-2"></label>
-                    <label for="carousel-3"></label>
-                    <label for="carousel-4"></label>
-                    <label for="carousel-5"></label>
-                </div>
-                <div class="carousel__nav">
-                    <label for="carousel-1"></label>
-                    <label for="carousel-2"></label>
-                    <label for="carousel-3"></label>
-                    <label for="carousel-4"></label>
-                    <label for="carousel-5"></label>
-                </div>
-            </div>
-        </div>
+
     </section>
 
     <section class="section-main padding-zero h-15">
