--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -4,23 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel Australia - Privacy</title>
+    <title>Aussie Luxe - Privacy</title>
     <link rel="stylesheet" href="../styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <section class="section-header">
-        <!-- <header class="header">
-            <h1 class="h1">Hot Australia</h1>
-            <nav class="header__nav">
-                <a class="header__nav__link" href="./index.html">Home</a>
-                <a class="header__nav__link" href="./pages/about-us.html">About Us</a>
-                <a class="header__nav__link" href="./pages/privacy.html">Privacy Policy</a>
-            </nav>
-        </header> -->
         <header class="header">
-            <a href="" class="logo h1">Hot Australia</a>
+            <a href="../index.html" class="logo h1">Hot Australia</a>
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
             <ul class="menu">
