--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <div id="slide-4" class="slide" id="slide-4">
                 <a href="#slide-3" class="slide__prev"><</a>
                 <p class="slide__paragraph">Music</p>
-                <h1 class="slide__h1">Tom Jones and Sydney Casino</h1>
-                <h4 class="slide__h4">21 st &amp;</h4>
+                <h1 class="slide__h1">Tom Jones</h1>
+                <h4 class="slide__h4">Sydney Casino</h4>
                 <h5 class="slide__h5">22 nd March</h5>
                 <button class="slide__btn">
                     Book Now
