--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
             <!-- Add Arrows -->
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
+
+            <div class="swiper-pagination"></div>
         </div>
 
 
@@ -292,6 +294,10 @@
             navigation: {
                 nextEl: '.swiper-button-next',
                 prevEl: '.swiper-button-prev',
+            },
+            pagination: {
+                el: '.swiper-pagination',
+                clickable: true,
             },
         });
     </script>
