--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
     <script src="./styles/swiper.min.js"></script>
     <script>
         var swiper = new Swiper('.swiper-container', {
+            loop: true, 
             navigation: {
                 nextEl: '.swiper-button-next',
                 prevEl: '.swiper-button-prev',
