--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -29,20 +29,67 @@
         </header>
     </section>
 
-    <section class="section-carousel">
-        <div class="carousel">
-            <div class="carousel__item">
-                <p class="carosel__item__caption">Comedy</p>
-                <h1 class="carousel__item__h1">John Clese and Eric Idle</h1>
-                <h2 class="carousel__item__h2">Crown Melbourne</h2>
-                <p class="carousel__item__data">16th March</p>
+    <section class="section-carousel" aria-label="Gallery">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div id="slide-1" class="slide" id="slide-1">
+                        <p class="slide__paragraph">Comedy</p>
+                        <h1 class="slide__h1">John Cleese and Eric Idle</h1>
+                        <h4 class="slide__h4">Crown Melbourne</h4>
+                        <h5 class="slide__h5">16th March</h5>
+                        <button class="slide__btn">
+                            Book Now
+                        </button>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="swiper-slide">
+                        <div id="slide-1" class="slide" id="slide-1">
+                            <p class="slide__paragraph">Music</p>
+                            <h1 class="slide__h1">Berlind Carlisle and Jupiters</h1>
+                            <h4 class="slide__h4">Gold Coast</h4>
+                            <h5 class="slide__h5">4 th March</h5>
+                            <button class="slide__btn">
+                                Book Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="swiper-slide">
+                        <div id="slide-1" class="slide" id="slide-1">
+                            <p class="slide__paragraph">Show</p>
+                            <h1 class="slide__h1">Cabaret De Paris and Jupiters</h1>
+                            <h4 class="slide__h4">Gold Coast</h4>
+                            <h5 class="slide__h5">27 th February</h5>
+                            <button class="slide__btn">
+                                Book Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="swiper-slide">
+                        <div id="slide-1" class="slide" id="slide-1">
+                            <p class="slide__paragraph">Music</p>
+                            <h1 class="slide__h1">Tom Jones</h1>
+                            <h4 class="slide__h4">Sydney Casino</h4>
+                            <h5 class="slide__h5">22 nd Marc</h5>
+                            <button class="slide__btn">
+                                Book Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="carousel__item"></div>
-            <div class="carousel__item"></div>
-            <div class="carousel__item"></div>
-            <div class="carousel__item"></div>
+            <!-- Add Arrows -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+
+            <div class="swiper-pagination"></div>
         </div>
-    </section>
+
 
     <section class="section-main padding-zero h-109">
         <div class="info">
